--- a/package.json
+++ b/package.json
@@ -7,15 +7,15 @@
   "scripts": {
     "dev": "gulp dev"
   },
-  "dependencies": {
-    "del": "^5.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
     "@babel/register": "^7.10.1",
+    "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.1",
-    "gulp-pug": "^4.0.1"
+    "gulp-pug": "^4.0.1",
+    "gulp-webserver": "^0.9.1"
   }
 }
