--- a/package.json
+++ b/package.json
@@ -7,7 +7,9 @@
   "scripts": {
     "dev": "gulp dev"
   },
-  "dependencies": {},
+  "dependencies": {
+    "gulp-image": "^6.1.0"
+  },
   "devDependencies": {
     "@babel/core": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
