--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "dev": "gulp dev"
   },
   "dependencies": {
-    "gulp-image": "^6.1.0"
+    "gulp-image": "^6.1.0",
+    "gulp-sass": "^4.1.0"
   },
   "devDependencies": {
     "@babel/core": "^7.10.1",
