--- a/package.json
+++ b/package.json
@@ -7,10 +7,7 @@
   "scripts": {
     "dev": "gulp dev"
   },
-  "dependencies": {
-    "gulp-image": "^6.1.0",
-    "gulp-sass": "^4.1.0"
-  },
+  "dependencies": {},
   "devDependencies": {
     "@babel/core": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
@@ -18,7 +15,11 @@
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.1",
+    "gulp-csso": "^4.0.1",
+    "gulp-image": "^6.1.0",
     "gulp-pug": "^4.0.1",
-    "gulp-webserver": "^0.9.1"
+    "gulp-sass": "^4.1.0",
+    "gulp-webserver": "^0.9.1",
+    "gulp-autoprefixer": "^7.0.1"
   }
 }
