--- a/package.json
+++ b/package.json
@@ -14,12 +14,15 @@
     "@babel/register": "^7.10.1",
     "del": "^5.1.0",
     "gulp": "^4.0.2",
+    "gulp-autoprefixer": "^7.0.1",
     "gulp-cli": "^2.2.1",
     "gulp-csso": "^4.0.1",
     "gulp-image": "^6.1.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
     "gulp-webserver": "^0.9.1",
-    "gulp-autoprefixer": "^7.0.1"
+    "babelify": "^10.0.0",
+    "gulp-bro": "^2.0.0",
+    "uglifyify": "^5.0.2"
   }
 }
