--- a/package.json
+++ b/package.json
@@ -9,9 +9,13 @@
     "build": "gulp build",
     "deploy": "gulp deploy"
   },
-  "dependencies": {},
+  "dependencies": {
+    "debug": "^4.1.1",
+    "lodash": "^4.17.15",
+    "lodash.template": "^4.5.0",
+    "open": "^7.0.4"
+  },
   "devDependencies": {
-    "gulp-gh-pages": "^0.5.4",
     "@babel/core": "^7.10.1",
     "@babel/preset-env": "^7.10.1",
     "@babel/register": "^7.10.1",
@@ -22,6 +26,7 @@
     "gulp-bro": "^2.0.0",
     "gulp-cli": "^2.2.1",
     "gulp-csso": "^4.0.1",
+    "gulp-gh-pages": "^0.5.4",
     "gulp-image": "^6.1.0",
     "gulp-pug": "^4.0.1",
     "gulp-sass": "^4.1.0",
